2004-03-19  David Sheldon <dave-mono@earth.li>

  * ThreadTest.cs: Removed Ignore attributes from 
      CurrentPrincipal_PrincipalPolicy_NoPrincipal and
      CurrentPrincipal_PrincipalPolicy_UnauthenticatedPrincipal
    Now that bug 54041 is fixed, and they wont livelock.

2004-02-05  Sebastien Pouliot  <sebastien@ximian.com>

	* ThreadTest.cs: Added unit tests for CurrentPrincipal.

2003-01-28  Nick Drochak <ndrochak@gol.com>

        * MutexTest.cs: Ignore tests that hang mono.
        * ThreadTest.cs: Ignore tests that hang mono.

2003/01/23  Nick Drochak <ndrochak@gol.com>

	* ThreadTest.cs: Test for alternate possibilities

2003-01-13  Nick Drochak  <ndrochak@gol.com>

	* MutexTest.cs: Disable some tests that case unhandled exceptions
	on MS.NET.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-11-29  Eduardo Garcia Cebollero <kiwnix@yahoo.es>

	* MutexTest.cs : New suite for Mutex.
	
2002-11-23  Eduardo Garcia Cebollero <kiwnix@yahoo.es>

	* ThreadTest.cs : New suite for Thread.
	* AllTests.cs : Add the new suite.