@@ -1,3 +1,7 @@
+2004-04-06  Lluis Sanchez Gual <lluis@ximian.com>
+
+	* ReaderWriterLockTest.cs: New tests for System.Threading.ReaderWriterLock.
+
 2004-03-19  David Sheldon <dave-mono@earth.li>
 
   * ThreadTest.cs: Removed Ignore attributes from 
